GitOps/ArgoCD/environments/dev/cluster/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resources-dev
  annotations:
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":8080}]'
    alb.ingress.kubernetes.io/scheme: internet-facing 
    alb.ingress.kubernetes.io/subnets: subnet-0790765df72f26123,subnet-0d7357c57b1c8cbb6,subnet-0c96c04729fc7129a
spec:
  ingressClassName: "alb"
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: organization-api
              port:
                number: 80
